--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hw-timers",
   "version": "1.0.0",
+  "homepage": "https://daniilkhlivniuk1.github.io/hw-timers/",
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
